Added background. Picture is still missing

--- a/report.bib
+++ b/report.bib
@@ -13,4 +13,13 @@
   pages={407--420},
   year={2014},
   organization={ACM}
-} 
+}
+
+@ARTICLE{ieeestandard, 
+journal={IEEE Std 802.3-2012 (Revision to IEEE Std 802.3-2008)}, 
+title={IEEE Standard for Ethernet - Section 3}, 
+year={2012}, 
+month={Dec}, 
+pages={1-0}, 
+keywords={EPON;Ethernet networks;IEEE standards;Passive optical networks;10 Gigabit Ethernet;100 Gigabit Ethernet;1000BASE;100BASE;100GBASE;10BASE;10GBASE;40 Gigabit Ethernet;40GBASE;AUI;Auto Negotiation;Backplane Ethernet;DTE Power via the MDI;EPON;Ethernet;Ethernet in the First Mile;Ethernet passive optical network;Fast Ethernet;GMII;Gigabit Ethernet;MDI;MIB;MII;PHY;PMA;Physical Layer;Power over Ethernet;VLAN TAG;XGMII;attachment unit interface;data processing;information exchange;local area network;management;media independent interface;medium dependent interface;physical coding sublayer;physical medium attachment;repeater;type field}, 
+doi={10.1109/IEEESTD.2012.6419737},}
