--- a/report.tex
+++ b/report.tex
@@ -62,23 +62,17 @@ In standard environments, both Data Link and the Physical (PHY) layers are defin
 
 \section{Introduction}
 
-In standard environments, both Data Link and the Physical (PHY) layers are defined in the Network Interface Cards (NIC) and they cannot be accessed in real-time via software. However, these lower layers contain valuable information that can be used to measure and to improve the performance of the network. Recently, SoNIC \cite{lee2013sonic} was proposed to provide real-time access to the Physical Layer and it was used to accurately measure the performance of a high-speed wired complex network \cite{wang2014timing}. However, current SoNIC design and implementation only operates in 10 GbE (Gigabit Ethernet) devices. 
+In standard environments, both Data Link and the Physical (PHY) layers are defined in the Network Interface Cards (NIC) and they cannot be accessed in real-time via software. However, these lower layers contain valuable information that can be used to measure and to improve the performance of the network. Recently, SoNIC \cite{lee2013sonic} was proposed to provide real-time access to the Physical Layer and it was used to accurately measure the performance of a high-speed wired complex network \cite{wang2014timing}. However, current SoNIC design and implementation only operates in 10 GbE (Gigabit Ethernet) devices.
 
 \section{Background}
 
-Duis dictum malesuada arcu, ut tempor arcu tempus finibus. Proin posuere fringilla ullamcorper. Aenean sit amet eros odio. Pellentesque tristique facilisis placerat. Phasellus aliquam id nisl in ultricies. Pellentesque mattis suscipit nisl et ullamcorper. Pellentesque porta, justo ut dignissim rutrum, ante ante consectetur odio, a placerat sapien massa in erat. Nam blandit ultrices euismod. Vestibulum et magna rhoncus, fringilla sem vitae, hendrerit tortor. Nullam tincidunt purus ac est tempor ullamcorper.
+According to the IEEE 802.3 standard \cite{ieeestandard}, the PHY of the 1000BASE-X standard consists of three sublayers: the Physical Coding Sublayer (PCS), the Physical Medium Attachment (PMA) sublayer, and the Physical Medium Dependent (PMD) sublayer (see figure \cite{fig:archi}). The PMD sublayer is responsible for transmitting and receiving symbols from the medium. The PMA sublayer is responsible for clock recovery and for serializing and deserializing the bitstream. The PCS sublayer comprises the encoding and decoding scheme used in the 1000BASE-X standard. In order to support different Gigabit technologies, the PCS communicates with the Gigabit Media Independent Interface (GMII). The IEEE 802.3 Clause 36 explains the PCS sublayer in further detail, but we summarize it below.
 
-\subsection{Hardware}
-
-Quisque eget metus id massa pulvinar laoreet sit amet nec ligula. Donec feugiat lacus id mauris convallis, quis vehicula odio rutrum. Aliquam dictum mauris in nisi tristique suscipit. Nulla ullamcorper pellentesque dui, elementum congue tortor lacinia dignissim. In rutrum id justo id euismod. Curabitur varius diam lorem, nec mollis nibh maximus ut. Vestibulum malesuada dui convallis massa dictum, vel euismod tellus hendrerit. Etiam vitae urna faucibus, mattis tellus sed, scelerisque ante. Sed vel lectus convallis, egestas ante ut, laoreet dui. Sed iaculis arcu non auctor dignissim. Donec efficitur est a nunc accumsan cursus. Nulla orci erat, placerat eu erat vel, ultricies molestie magna. Quisque eleifend lacus vel urna ullamcorper imperdiet. Vestibulum in odio a tellus porttitor malesuada.
-
-\section{Related Work}
-
-Duis dictum malesuada arcu, ut tempor arcu tempus finibus. Proin posuere fringilla ullamcorper. Aenean sit amet eros odio. Pellentesque tristique facilisis placerat. Phasellus aliquam id nisl in ultricies. Pellentesque mattis suscipit nisl et ullamcorper. Pellentesque porta, justo ut dignissim rutrum, ante ante consectetur odio, a placerat sapien massa in erat. Nam blandit ultrices euismod. Vestibulum et magna rhoncus, fringilla sem vitae, hendrerit tortor. Nullam tincidunt purus ac est tempor ullamcorper.
-
-Quisque eget metus id massa pulvinar laoreet sit amet nec ligula. Donec feugiat lacus id mauris convallis, quis vehicula odio rutrum. Aliquam dictum mauris in nisi tristique suscipit. Nulla ullamcorper pellentesque dui, elementum congue tortor lacinia dignissim. In rutrum id justo id euismod. Curabitur varius diam lorem, nec mollis nibh maximus ut. Vestibulum malesuada dui convallis massa dictum, vel euismod tellus hendrerit. Etiam vitae urna faucibus, mattis tellus sed, scelerisque ante. Sed vel lectus convallis, egestas ante ut, laoreet dui. Sed iaculis arcu non auctor dignissim. Donec efficitur est a nunc accumsan cursus. Nulla orci erat, placerat eu erat vel, ultricies molestie magna. Quisque eleifend lacus vel urna ullamcorper imperdiet. Vestibulum in odio a tellus porttitor malesuada.
+When Ethernet frames are passed from the data link layer to the PHY, they are reformatted before being sent accross the physical medium. On the transmit (TX) path, the PCS encodes every octet of an Ethernet frame into a 10-bit \emph{code group} using the \emph{8B/10B transmission code} (specified in clause 36.2.4). In order to achieve DC balance\footnote{A Direct Current (DC) balanced signal has a similar number of 0's and 1's. It is used to prevent bit errors in circuits.}, the 8B/10B codec uses two different code groups (RD- and RD+) for the same octet and uses a state machine to define which code group should be used. The entire 10-bit code-group is transmitted over a physical medium. On the receive (RX) path, the PCS decodes the 10-bit code-group into the octet and then sends it to the layer above.
 
 \section{Design}
+
+In order to provide real-time access to the PHY layer in software, the user must be able to 
 
 Duis dictum malesuada arcu, ut tempor arcu tempus finibus. Proin posuere fringilla ullamcorper. Aenean sit amet eros odio. Pellentesque tristique facilisis placerat. Phasellus aliquam id nisl in ultricies. Pellentesque mattis suscipit nisl et ullamcorper. Pellentesque porta, justo ut dignissim rutrum, ante ante consectetur odio, a placerat sapien massa in erat. Nam blandit ultrices euismod. Vestibulum et magna rhoncus, fringilla sem vitae, hendrerit tortor. Nullam tincidunt purus ac est tempor ullamcorper.
 
@@ -95,6 +89,13 @@ Quisque eget metus id massa pulvinar laoreet sit amet nec ligula. Donec feugiat 
 Duis dictum malesuada arcu, ut tempor arcu tempus finibus. Proin posuere fringilla ullamcorper. Aenean sit amet eros odio. Pellentesque tristique facilisis placerat. Phasellus aliquam id nisl in ultricies. Pellentesque mattis suscipit nisl et ullamcorper. Pellentesque porta, justo ut dignissim rutrum, ante ante consectetur odio, a placerat sapien massa in erat. Nam blandit ultrices euismod. Vestibulum et magna rhoncus, fringilla sem vitae, hendrerit tortor. Nullam tincidunt purus ac est tempor ullamcorper.
 
 Quisque eget metus id massa pulvinar laoreet sit amet nec ligula. Donec feugiat lacus id mauris convallis, quis vehicula odio rutrum. Aliquam dictum mauris in nisi tristique suscipit. Nulla ullamcorper pellentesque dui, elementum congue tortor lacinia dignissim. In rutrum id justo id euismod. Curabitur varius diam lorem, nec mollis nibh maximus ut. Vestibulum malesuada dui convallis massa dictum, vel euismod tellus hendrerit. Etiam vitae urna faucibus, mattis tellus sed, scelerisque ante. Sed vel lectus convallis, egestas ante ut, laoreet dui. Sed iaculis arcu non auctor dignissim. Donec efficitur est a nunc accumsan cursus. Nulla orci erat, placerat eu erat vel, ultricies molestie magna. Quisque eleifend lacus vel urna ullamcorper imperdiet. Vestibulum in odio a tellus porttitor malesuada.
+
+\section{Related Work}
+
+Duis dictum malesuada arcu, ut tempor arcu tempus finibus. Proin posuere fringilla ullamcorper. Aenean sit amet eros odio. Pellentesque tristique facilisis placerat. Phasellus aliquam id nisl in ultricies. Pellentesque mattis suscipit nisl et ullamcorper. Pellentesque porta, justo ut dignissim rutrum, ante ante consectetur odio, a placerat sapien massa in erat. Nam blandit ultrices euismod. Vestibulum et magna rhoncus, fringilla sem vitae, hendrerit tortor. Nullam tincidunt purus ac est tempor ullamcorper.
+
+Quisque eget metus id massa pulvinar laoreet sit amet nec ligula. Donec feugiat lacus id mauris convallis, quis vehicula odio rutrum. Aliquam dictum mauris in nisi tristique suscipit. Nulla ullamcorper pellentesque dui, elementum congue tortor lacinia dignissim. In rutrum id justo id euismod. Curabitur varius diam lorem, nec mollis nibh maximus ut. Vestibulum malesuada dui convallis massa dictum, vel euismod tellus hendrerit. Etiam vitae urna faucibus, mattis tellus sed, scelerisque ante. Sed vel lectus convallis, egestas ante ut, laoreet dui. Sed iaculis arcu non auctor dignissim. Donec efficitur est a nunc accumsan cursus. Nulla orci erat, placerat eu erat vel, ultricies molestie magna. Quisque eleifend lacus vel urna ullamcorper imperdiet. Vestibulum in odio a tellus porttitor malesuada.
+
 
 \section{Conclusion}
 
