--- a/report.bib
+++ b/report.bib
@@ -23,3 +23,9 @@ month={Dec},
 pages={1-0}, 
 keywords={EPON;Ethernet networks;IEEE standards;Passive optical networks;10 Gigabit Ethernet;100 Gigabit Ethernet;1000BASE;100BASE;100GBASE;10BASE;10GBASE;40 Gigabit Ethernet;40GBASE;AUI;Auto Negotiation;Backplane Ethernet;DTE Power via the MDI;EPON;Ethernet;Ethernet in the First Mile;Ethernet passive optical network;Fast Ethernet;GMII;Gigabit Ethernet;MDI;MIB;MII;PHY;PMA;Physical Layer;Power over Ethernet;VLAN TAG;XGMII;attachment unit interface;data processing;information exchange;local area network;management;media independent interface;medium dependent interface;physical coding sublayer;physical medium attachment;repeater;type field}, 
 doi={10.1109/IEEESTD.2012.6419737},}
+
+@misc{testbench,
+  title = {1000BASE-X IEEE 802.3-2008 Clause 36/37 - PCS Testbench},
+  howpublished = {\url{http://opencores.org/websvn,filedetails?repname=1000base-x&path=%2F1000base-x%2Ftrunk%2Ftestbench%2FREADME&rev=6}},
+  note = {Accessed: 2014-12-12}
+}
